# lidar-geo-analysis

./: .gitignore  CMakeLists.txt  README.md
data/: lidar1.toml
src/: main.cpp
src/controller/: app_controller.cpp  app_controller.hpp
src/model/: geometry.cpp  geometry.hpp  lidar.cpp  lidar.hpp  ransac.cpp  ransac.hpp  toml_parser.cpp  toml_parser.hpp  types.hpp
src/utils/: cli.cpp  cli.hpp
src/view/: console_view.cpp  console_view.hpp  svg_writer.cpp  svg_writer.hpp
tests/: CMakeLists.txt
